--- a/www/b221/style.css
+++ b/www/b221/style.css
@@ -210,7 +210,8 @@ table.dataTable thead .sorting_desc {
 	border-bottom:1px solid #dadada;
 }
 
-#b221-leadsTable .leads-item .top-row .selectize-input {
+#b221-leadsTable .leads-item .top-row .selectize-input,
+#b221-leadsTable .leads-item .top-row .shiny-date-input input {
 	border:none;
 	padding-left:0px;
 	box-shadow:none;
@@ -741,7 +742,14 @@ table.dataTable thead .sorting_desc {
 	box-shadow:5px 5px 10px rgba(0,0,0,0.07);
 	background-color:#2485e6;
 	display:flex;
-	border:1px solid #1f63a7;
+	border:2px solid transparent;
+	transition:all 0.5s ease-out;
+	cursor:pointer;
+}
+
+#hintContainer .hint-item.starred{
+	border:2px solid #ffd600;
+	transition:all 0.5s ease-out;
 }
 
 #hintContainer {
