--- a/www/deliver/style.css
+++ b/www/deliver/style.css
@@ -74,7 +74,6 @@
 	justify-content: center;
 	align-items: center;
 	float:left;
-	width:100%;
 }
 
 .load-more.active {
@@ -169,3 +168,56 @@ label {
 	margin-bottom:15px;
 	color:#0E4E8C;
 }
+
+/*------------------------------------HERE GOES LG STYLE DECLARATIONS ------------------------------------------ */
+
+body {
+  font-size: 1.2em;
+}
+
+.truncate {
+  max-width: 350px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.item {
+  margin: 10px 20px 10px 20px ;
+}
+
+.top-item{
+  
+}
+
+.middle-item{
+  
+}
+
+table .item-label {
+    display: inline-block;
+    font-size: 0.9em;
+    padding: 1px 10px;
+    border: 1px solid #d2d2d2;
+    border-radius: 20px;
+    background-color: #008080;
+    float: left;
+    margin-right: 40px;
+    color: white;
+    text-align: center;
+    margin-top: 0.6em;
+}
+
+.middle-item{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/*.hidden-item{
+  text-indent: -9999px;                 
+  height: 100px;                        
+  width: 600px;
+  white-space: nowrap; 
+}*/
+
