--- a/www/deliver/style.css
+++ b/www/deliver/style.css
@@ -258,8 +258,15 @@ table .item-label {
 
 .box-item-label{
       display: flex;
+      justify-content: center;
 }
 
-.custom-table > tr > td {
-  width: 100%;
+.labels-tr{
+  border-bottom:1px solid #000;
+  border-top: 1px dotted black;
+  background-color: #F0F8FF;
+}
+
+#DataTables_Table_0{
+	border-collapse: collapse;
 }
