--- a/www/deliver/style.css
+++ b/www/deliver/style.css
@@ -223,12 +223,23 @@ table .status-label {
 table .usr-label {
   
     font-size: 0.9em;
+    font-weight: bold;
     border: 1px solid grey;
     border-radius: 20px;
     background-color: gainsboro;
     color: black;
     text-align: center;
     padding: 0px 5px 0px 5px;
+}
+
+.accept, .delete, .edit {
+    width: 2.1em;
+    padding: 3px 2px 0px 2px;
+}
+
+.accept:hover, .delete:hover, .edit:hover{
+	opacity: 0.6;
+	transform: scale(1.3);
 }
 
 .middle-item{
@@ -298,7 +309,25 @@ table .usr-label {
   /*flex: 50%;*/
 }
 
-.box-status-label{
+.status-column{
+  display: flex;
+  flex-direction: column;
+  flex-flow: wrap;
+  white-space: nowrap;
+  justify-content: center;
+}
+
+.buttons-column {
+}
+
+.status-row{
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr;
+  justify-items: center;
+}
+
+.box-usr-label{
   display: flex;
   flex-direction: column;
   flex-flow: wrap;
