--- a/www/deliver/style.css
+++ b/www/deliver/style.css
@@ -372,3 +372,82 @@ tr.confirmed {
 tr.deleted {
   background-color: #E6B0AA !important;
 }
+
+.editMode{
+  width: 30%;
+  height: 90%;
+  position: fixed;
+  top: 0px;
+  left:-540px;
+  background-color: #9370DB;
+  z-index: 99999;
+  top: 5%;
+  border-radius: 25px;
+  border: 2px solid navy;
+}
+
+.editMode h1 {
+  text-align: center;
+  background-color: floralwhite;
+  font-size: 2em;
+  font-weight: 400;
+  font-family: monospace;
+}
+
+.canvas{
+    position: relative;
+    width: 100%;
+    height: 90%;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: auto;
+    column-gap: 10px;
+    row-gap: 10px;
+    align-items: center;
+    justify-items: center;
+}
+
+.canvas div {
+  text-align: center;
+}
+
+.canvas div label {
+  display: block;
+  font-weight: 200;
+  color: black;
+}
+
+#save-edit{
+    float: right;
+    display:inline-block;
+    padding:0.3em 1.2em;
+    margin:0 0.3em 0.3em 0;
+    border-radius:2em;
+    box-sizing: border-box;
+    text-decoration:none;
+    font-family:'Roboto',sans-serif;
+    font-weight:300;
+    color:#FFFFFF;
+    background-color:#4eb5f1;
+    text-align:center;
+    transition: all 0.2s;
+}
+
+}
+#save-edit:hover{
+    background-color:#4095c6;
+}
+
+.overlay{
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    overflow: hidden;
+    z-index: 99998;
+    pointer-events: all;
+    background: rgba(255,255,255,0.5);
+    backdrop-filter: blur(4px);
+    display: none;
+}
