--- a/www/deliver/style.css
+++ b/www/deliver/style.css
@@ -232,12 +232,16 @@ table .usr-label {
     padding: 0px 5px 0px 5px;
 }
 
-.accept, .delete, .edit {
+.accept, .delete, .edit, .duplicate {
     width: 2.1em;
     padding: 3px 2px 0px 2px;
 }
 
-.accept:hover, .delete:hover, .edit:hover{
+.duplicates-remove{
+  display: none;
+}
+
+.accept:hover, .delete:hover, .edit:hover, .duplicate:hover {
 	opacity: 0.6;
 	transform: scale(1.3);
 }
@@ -373,6 +377,13 @@ tr.deleted {
   background-color: #E6B0AA !important;
 }
 
+tr.duplicate-keep {
+  box-shadow: 0 0 2px deeppink,
+				0 0 5px rgba(0, 0, 0, 1),
+				inset 0 0 5px rgba(0, 0, 0, 1);
+	border-radius: 10px;
+}
+
 .editMode{
   width: 30%;
   height: 90%;
@@ -386,7 +397,7 @@ tr.deleted {
   border: 2px solid navy;
 }
 
-.editMode h1 {
+.editMode h1, .duplicatesMode h1 {
   text-align: center;
   background-color: floralwhite;
   font-size: 2em;
@@ -407,6 +418,11 @@ tr.deleted {
     justify-items: center;
 }
 
+.canvas-dupl {
+  text-align: center;
+  font-size: 1.4em;
+}
+
 .canvas div {
   text-align: center;
 }
@@ -416,6 +432,20 @@ tr.deleted {
   font-weight: 200;
   color: black;
 }
+
+.duplicatesMode{
+    width: 20%;
+    height: 20%;
+    position: fixed;
+    top: 0px;
+    right: -350px;
+    background-color: #9370DB;
+    z-index: 99999;
+    top: 5%;
+    border-radius: 25px;
+    border: 2px solid navy;
+}
+
 
 #save-edit{
     float: right;
