--- a/www/deliver/style.css
+++ b/www/deliver/style.css
@@ -379,7 +379,7 @@ tr.deleted {
 
 .editMode{
   width: 30%;
-  height: 90%;
+  height: 50%;
   position: fixed;
   top: 0px;
   left:-540px;
@@ -401,7 +401,6 @@ tr.deleted {
 .canvas{
     position: relative;
     width: 100%;
-    height: 90%;
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: auto;
@@ -518,4 +517,8 @@ input#cancel-dupl{
     background: rgba(255,255,255,0.5);
     backdrop-filter: blur(4px);
     display: none;
+}
+
+.remove {
+  display: none;
 }
